# hexapodo_common

./: README.md
hexapodo_altern_tripod/: CMakeLists.txt  package.xml
hexapodo_altern_tripod/src/: altern_tripod.cpp  altern_tripod.py
hexapodo_common/: CMakeLists.txt  package.xml
hexapodo_control/: CMakeLists.txt  package.xml
hexapodo_control/config/: hexapodo_control.yaml  twist_mux.yaml
hexapodo_control/launch/: hexapodo_control.launch
hexapodo_controller_interface/: CMakeLists.txt  package.xml
hexapodo_controller_interface/include/c_leg/: c_leg.h
hexapodo_controller_interface/launch/: controller_interface.launch
hexapodo_controller_interface/libraries/c_leg/: c_leg.cpp
hexapodo_controller_interface/src/: hexapodo_controller_interface.cpp
hexapodo_controller_interface/srv/: CLegCommand.srv
hexapodo_description/: CMakeLists.txt  package.xml
hexapodo_description/launch/: hexapodo_rviz.launch  hexapodo_state_robot.launch
hexapodo_description/meshes/: chassis.stl  chassis_piezas.stl  pvc.stl
hexapodo_description/robots/: hexapodo.robot.xacro  hexapodo.urdf.xacro  hexapodo_locked.xacro
hexapodo_description/urdf/: base.robot.xacro  base.xacro  base_locked.xacro  pata_c.robot.xacro  pata_c.xacro  pata_c_locked.xacro
hexapodo_description/urdf/sensores/: hokuyo_sensor.xacro  imu.xacro  kinect_camera.xacro
hexapodo_fsm/: CMakeLists.txt  package.xml
hexapodo_fsm/src/: fsm_smach.py
hexapodo_pad/: CMakeLists.txt  package.xml
hexapodo_pad/configuration/: logitech.config.yaml
hexapodo_pad/launch/: hexapodo_pad.launch
hexapodo_walking_modes/: CMakeLists.txt  package.xml
hexapodo_walking_modes/include/: hexapodo_fsm.h
hexapodo_walking_modes/include/altern_tripod/: altern_tripod.h
hexapodo_walking_modes/include/altern_tripod_fem/: altern_tripod_fem.h  wave.h
hexapodo_walking_modes/include/common_methods/: hexapod_common_methods.h
hexapodo_walking_modes/include/libraries/altern_tripod/: altern_tripod.cpp
hexapodo_walking_modes/include/robot_configuration/: robot_configuration.h
hexapodo_walking_modes/include/stand_by/: stand_by.h
hexapodo_walking_modes/include/stand_by/include/: hhhhj.h
hexapodo_walking_modes/include/stand_by/src/: hhhhj.cpp
hexapodo_walking_modes/include/wave/: wave.h
hexapodo_walking_modes/libraries/: hexapodo_fsm.cpp
hexapodo_walking_modes/libraries/altern_tripod/: altern_tripod.cpp
hexapodo_walking_modes/libraries/altern_tripod_fem/: altern_tripod_fem.cpp  wave.cpp
hexapodo_walking_modes/libraries/c_leg/: c_leg.cpp
hexapodo_walking_modes/libraries/common_methods/: hexapod_common_methods.cpp
hexapodo_walking_modes/libraries/robot_configuration/: robot_configuration.cpp
hexapodo_walking_modes/libraries/stand_by/: stand_by.cpp
hexapodo_walking_modes/libraries/tinyfsm/: tinyfsm.cpp
hexapodo_walking_modes/libraries/wave/: wave.cpp
hexapodo_walking_modes/src/: aleatorio.cpp  aleatorio_joystick.cpp  aleatorio_joystick_kinematic.cpp  aleatorio_old.cpp  aleatorio_un_tripode.cpp  control_velocidad_1_pata.cpp  control_velocidad_6_patas.cpp  control_velocidad_6_patas_cmd_vel.cpp  control_velocidad_6_patas_cmd_vel_turning.cpp  elevator.hpp  fsm.cpp  fsm.dia  fsm.h  fsm_simple.dia  fsmlist.hpp  hexapodo.cpp  hexapodo.h  hexapodo_fsm.cpp  hexapodo_fsm_listener.cpp  matrices.cpp  modo_todas_juntas.cpp  modo_tripode_alterno.cpp  motor.hpp  prubaClase.cpp  pruebaClase.h  prueba_patas.cpp  tf_broadcaster.cpp  tripode_alterno.cpp  tripode_alterno_clases.cpp  tripode_alterno_fsm.cpp  tripode_alterno_giro.cpp  tripode_alterno_v2.cpp
