<?xml version="1.0"?>
<package>
  <name>hexapodo_common</name>
  <version>1.0.0</version>
  <description>URDF description of the hexapod and other files for simulation</description>

  <license>BSD</license>

  <author email="jorge.deleon@upm.es">Jorge De Leon</author>
  <maintainer email="jorge.deleon@upm.es">Jorge De Leon Rivas</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>hexapodo_description</run_depend>
  <run_depend>hexapodo_pad</run_depend>
  <export>

    <metapackage/>

  </export>
</package>
