<?xml version="1.0"?>
<package>
  <name>hexapodo_control</name>
  <version>1.0.0</version>
  <description> This package contains the launch files that load the required controller interfaces for simulation in Gazebo.</description>

  <license>BSD</license>

  <author email="raul.cebolla.arroyo@alumnos.upm.es">Raul Cebolla Arroyo</author>
  <author email="jorge.deleon@upm.es"> Jorge De Leon </author>
  <maintainer email="jorge.deleon@upm.es"> Jorge De Leon </maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <!--build_depend>ros_controllers</build_depend>
  <build_depend>ros_control</build_depend>
  <run_depend>robot_state_publisher</run_depend>

  <run_depend>ros_controllers</run_depend>
  <run_depend>ros_control</run_depend>
  <run_depend>robot_state_publisher</run_depend-->
  <!--run_depend>hexapodo_pad</run_depend--> 

</package>
