<?xml version="1.0"?>
<package>
  <name>hexapodo_controller_interface</name>
  <version>0.0.0</version>
  <description>The hexapodo_controller_interface package</description>

  <license>BSD</license>

  <author email="raul.cebolla.arroyo@alumnos.upm.es">Raul Cebolla Arroyo</author>
  <maintainer email="raul.cebolla.arroyo@alumnos.upm.es">Raul Cebolla Arroyo</maintainer>
  <maintainer email="jorge.deleonrivas@upm.es">Jorge De Leon Rivas</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

</package>
