<?xml version="1.0"?>
<package>
  <name>hexapodo_description</name>
  <version>1.0.0</version>
  <description>URDF description of the hexapodo</description>

  <license>BSD</license>

  <author email="jorge.deleon@upm.es">Jorge De Leon Rivas</author>
  <maintainer email="jorge.deleon@upm.es">Jorge De Leon Rivas</maintainer>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>xacro</build_depend>
  <!--build_depend>robotnik_sensors</build_depend-->
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>
  <!--run_depend>robotnik_sensors</run_depend-->

</package>
