<?xml version="1.0"?>
<package>
  <name>hexapodo_pad</name>
  <version>0.0.0</version>
  <description>The hexapodo_pad package that uses teleop_twist_joy package</description>

  <license>BSD</license>

  <author email="jorge.deleon@upm.es">Jorge De Leon Rivas</author>
  <maintainer email="jorge.deleon@upm.es">Jorge De Leon Rivas</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>teleop_twist_joy</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>teleop_twist_joy</run_depend>

</package>
